# Reminecraft

./: .gitignore  LICENSE  README.md  _javadetect.bat  _javadetect.sh  config.json  gpudaemon.bat  gpudaemon.sh  localhost.bat  localhost.sh  log4j2.xml  runner.bat  runner.sh
.claude/: launch.json
behaviourpack/: manifest.json
builder/: buildauth.bat  buildcore.bat  builddevmode.bat  buildnative.bat  buildperms.bat  buildplugin.bat  buildserver.bat  runbun.bat  setuper.bat  setuper.sh
core/: pom.xml
core/src/main/resources/: plugin.yml
itemsdat/: itemsdat.json
resourcepack/: manifest.json  packserver.ps1  packserver.sh  vulkanoptimizebedrock.mcpack  vulkanoptimizejava.mrpack
resourcepack/java/: pack.mcmeta
resourcepack/java/assets/minecraft/lang/: en_us.json
runfolder/: bukkit.yml  eula.txt  purpur.yml  server.properties  spigot.yml
runfolder/config/: paper-global.yml  paper-world-defaults.yml
scripts/: example-hud.ts
source/auth/: pom.xml
source/auth/src/main/resources/: config.yml  plugin.yml
source/authme/docs/: converters.md  hash_algorithms.md
source/bun/: package.json  tsconfig.json
source/bun/src/: database.ts  script_loader.ts  server.ts  stats.ts
source/bun/src/scripting/: events.ts
source/bun/src/ui/: dashboard.html
source/devmode/: pom.xml
source/fastlogin/: CONTRIBUTING.md  README.md
source/floodgate/: gradle.properties
source/geyser/: gradle.properties
source/geyser/core/: build.gradle.kts
source/gpu/: pom.xml
source/native/: CMakeLists.txt
source/native/src/: compression_helper.cpp
source/perms/: pom.xml
(+82 files in other folders)
